--- a/styles.css
+++ b/styles.css
@@ -4,170 +4,238 @@
 /* GENERAL STYLES */
 
 :root {
-    --dark-cyan: hsl(183, 100%, 15%);
-    --strong-cyan: hsl(172, 67%, 45%);
-    --dark-grayish-cyan: hsl(186, 14%, 43%);
-    --cyan: hsl(184, 14%, 56%);
-    --lighter-grayish-cyan: hsl(185, 41%, 84%);
-    --light-grayish-cyan: hsl(189, 41%, 97%);
-    --white: hsl(0, 0%, 100%);
-    --light-gray: #f3f8fb;
+  --dark-cyan: hsl(183, 100%, 15%);
+  --strong-cyan: hsl(172, 67%, 45%);
+  --weak-cyan: hsl(173, 61%, 77%);
+  --dark-grayish-cyan: hsl(186, 14%, 43%);
+  --cyan: hsl(184, 14%, 56%);
+  --lighter-grayish-cyan: hsl(185, 41%, 84%);
+  --light-grayish-cyan: hsl(189, 41%, 97%);
+  --white: hsl(0, 0%, 100%);
+  --light-gray: hsl(202, 50%, 97%);
 }
 
 * {
-    margin: 0;
-    padding: 0;
-    box-sizing: border-box;
+  margin: 0;
+  padding: 0;
+  box-sizing: border-box;
 }
 
 body {
-    font-family: 'Space-Mono', monospace;
-    background-color: var(--lighter-grayish-cyan);
-    color: #657d7b;
+  font-family: 'Space-Mono', monospace;
+  background-color: var(--lighter-grayish-cyan);
+  color: #657d7b;
 }
 
 html {
-    font-size: 62.5%;
+  font-size: 62.5%;
 }
 
 input {
-    text-align: right;
-    border: none;
-    background-color: transparent;
-    color: var(--dark-cyan);
-    font-size: 24px;
-    font-weight: 700;
-    font-family: inherit;
-    width: 100%;
-    cursor: pointer;
+  text-align: right;
+  border: none;
+  border-radius: 3px;
+  background-color: transparent;
+  color: var(--dark-cyan);
+  font-size: 24px;
+  font-weight: 700;
+  font-family: inherit;
+  width: 100%;
 }
 
 input:focus {
-    outline: none;
+  outline: none;
 }
 
 span {
-    font-size: 1.2rem;
-    display: block;
+  font-size: 1.2rem;
+  display: block;
 }
 
 button {
-    font-family: inherit;
+  border: none;
+  border-radius: 5px;
+  font-family: inherit;
+  font-size: 2.2rem;
+  font-weight: 700;
+  padding: 10px 0;
+  width: 100%;
+  color: var(--white);
+  background-color: var(--dark-cyan);
+  cursor: pointer;
 }
 
 /* MAIN CONTENT */
 
 main {
-    max-width: 350px;
+  width: 350px;
 }
 
 .heading {
-    color: var(--dark-cyan);
-    text-align: center;
-    margin: 20px 0;
+  color: var(--dark-cyan);
+  text-align: center;
+  margin: 20px 0;
 }
 
 .heading span {
-    text-transform: uppercase;
-    letter-spacing: 8px;
-    font-size: 1.6rem;
+  text-transform: uppercase;
+  letter-spacing: 8px;
+  font-size: 1.6rem;
 }
 
 .container {
-    background-color: var(--white);
-    min-height: calc(100vh - 69px);
-    border-radius: 20px;
-    padding: 30px;
+  background-color: var(--white);
+  border-radius: 20px;
+  padding: 30px;
 }
 
 .bill-amount, .people {
-    display: flex;
-    justify-content: space-between;
-    align-items: center;
-    background-color: var(--light-gray);
-    padding: 10px;
-    border: 2px solid transparent;
-    border-radius: 5px;
-    margin-bottom: 20px;
-}
-
-.bill-input {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  background-color: var(--light-gray);
+  padding: 10px;
+  border: 2px solid transparent;
+  border-radius: 5px;
+  margin-bottom: 30px;
+  height: 40px;
 }
 
 .blue-highlight {
-    border: 2px solid var(--strong-cyan);
+  border: 2px solid var(--strong-cyan);
+}
+
+.orange-highlight {
+  border: 2px solid hsl(12, 75%, 71%);
 }
 
 .tip-grid {
-    display: grid;
-    grid-template-columns: repeat(2, 1fr);
-    gap: 15px;
-    margin-bottom: 20px;
+  display: grid;
+  grid-template-columns: repeat(2, 1fr);
+  gap: 15px;
+  margin-bottom: 30px;
 }
 
-.grid-item {
-    font-size: 1.7rem;
-    font-weight: 700;
-    padding: 10px 0;
-    color: var(--white);
-    background-color: var(--dark-cyan);
-    border-radius: 3px;
-    display: flex;
-    justify-content: center;
-    align-items: center;
+.active {
+  background-color: var(--weak-cyan);
+  color: var(--dark-cyan);
 }
 
 .custom {
-    background-color: var(--light-gray);
-    color: var(--dark-cyan);
+  font-size: 2.2rem;
+  background-color: var(--light-gray);
+  color: var(--dark-cyan);
+  padding-right: 15px;
 }
 
+.custom:focus {
+  outline: var(--strong-cyan) solid 2px;
+}
 
+.people-number-block {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  margin-bottom: 8px;
+}
+
+#people-error {
+  color: #ec927c;
+}
 
 .output {
-    background-color: var(--dark-cyan);
-    border-radius: 10px;
-    padding: 30px 15px 20px 15px;
+  background-color: var(--dark-cyan);
+  border-radius: 10px;
+  padding: 30px 15px 20px 15px;
 }
 
 .tip-amount-block, .total-amount-block {
-    display: flex;
-    justify-content: space-between;
-    align-items: center;
-    margin-bottom: 25px;
-}
-
-.total-amount {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  margin-bottom: 25px;
 }
 
 .total {
-    font-size: 2.2rem;
-    font-weight: 700;
-    color: var(--strong-cyan);
-    flex-basis: 75%;
-    text-align: end;
+  font-size: 2.2rem;
+  font-weight: 700;
+  color: var(--strong-cyan);
+  text-align: end;
+  overflow: scroll;
+  flex-basis: 60%;
+}
+
+.output-title {
+  color: var(--white);
+  margin-bottom: 3px;
+  font-weight: 700;
+}
+
+.output-block {
+  height: 100%;
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
 }
 
 #reset {
-    background-color: var(--strong-cyan);
-    color: var(--dark-cyan);
-    border: none;
-    font-size: 1.7rem;
-    font-weight: 700;
-    padding: 10px 0;
-    width: 100%;
-    border-radius: 5px;
+  background-color: var(--strong-cyan);
+  color: var(--dark-cyan);
+  border: none;
+  font-size: 1.7rem;
+  font-weight: 700;
+  padding: 10px 0;
+  width: 100%;
+  border-radius: 5px;
 }
 
 #reset:disabled {
-    opacity: 0.4;
+  opacity: 0.2;
+  cursor: auto;
 }
-
 
 /* MEDIA QUERIES */
 
-@media (min-width: 375px) {
-    body {
-        /*background-color: chocolate;*/
-    }
+@media (min-width: 575px) {
+  body {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    height: 100vh;
+  }
+  
+  button {
+    font-size: 2rem;
+  }
+
+  main {
+    width: 700px;
+  }
+
+  .container {
+    display: flex;
+    justify-content: space-between;
+    gap: 30px;
+    height: 380px;
+  }
+
+  .input {
+    flex-basis: 50%;
+  }
+
+  .output {
+    flex-basis: 50%;
+  }
+
+  .heading {
+    margin-top: 0;
+  }
+
+  .tip-grid {
+    grid-template-columns: repeat(3, 1fr);
+  }
+
+  .custom {
+    font-size: 1.7rem;
+  }
 }
