Update button/input tag styles

--- a/styles.css
+++ b/styles.css
@@ -7,11 +7,8 @@
   --dark-cyan: hsl(183, 100%, 15%);
   --strong-cyan: hsl(172, 67%, 45%);
   --weak-cyan: hsl(173, 61%, 77%);
-  --dark-grayish-cyan: hsl(186, 14%, 43%);
   --cyan: hsl(184, 14%, 56%);
   --lighter-grayish-cyan: hsl(185, 41%, 84%);
-  --light-grayish-cyan: hsl(189, 41%, 97%);
-  --white: hsl(0, 0%, 100%);
   --light-gray: hsl(202, 50%, 97%);
 }
 
@@ -24,7 +21,7 @@
 body {
   font-family: 'Space-Mono', monospace;
   background-color: var(--lighter-grayish-cyan);
-  color: #657d7b;
+  color: hsl(175, 11%, 44%);
 }
 
 html {
@@ -41,10 +38,15 @@ input {
   font-weight: 700;
   font-family: inherit;
   width: 100%;
+  cursor: pointer;
 }
 
 input:focus {
   outline: none;
+}
+
+input:disabled {
+  cursor: auto;
 }
 
 span {
@@ -60,7 +62,7 @@ button {
   font-weight: 700;
   padding: 10px 0;
   width: 100%;
-  color: var(--white);
+  color: hsl(0, 0%, 100%);;
   background-color: var(--dark-cyan);
   cursor: pointer;
 }
@@ -84,7 +86,7 @@ main {
 }
 
 .container {
-  background-color: var(--white);
+  background-color: hsl(0, 0%, 100%);;
   border-radius: 20px;
   padding: 30px;
 }
@@ -114,6 +116,11 @@ main {
   grid-template-columns: repeat(2, 1fr);
   gap: 15px;
   margin-bottom: 30px;
+}
+
+.grid-button:disabled {
+  opacity: 0.5;
+  cursor: auto;
 }
 
 .active {
@@ -157,7 +164,7 @@ main {
 }
 
 .total {
-  font-size: 2.2rem;
+  font-size: 4rem;
   font-weight: 700;
   color: var(--strong-cyan);
   text-align: end;
@@ -166,7 +173,7 @@ main {
 }
 
 .output-title {
-  color: var(--white);
+  color: hsl(0, 0%, 100%);
   margin-bottom: 3px;
   font-weight: 700;
 }
@@ -220,15 +227,19 @@ main {
   }
 
   .input {
-    flex-basis: 50%;
+    flex-basis: 45%;
+    max-width: 50%;
   }
 
   .output {
-    flex-basis: 50%;
+    flex-basis: 55%;
+    max-width: 50%;
+    flex-grow: 0;
   }
 
   .heading {
     margin-top: 0;
+    margin-bottom: 50px;
   }
 
   .tip-grid {
